# kiterf

./: .gitignore  .gitmodules  .travis.yml  ESP32_K210-cache.lib  ESP32_K210-rescue.lib  ESP32_K210.kicad_pcb  ESP32_K210.kicad_pcb-bak  ESP32_K210.sch  ESP32_K210.xml  POWER.bak  README.md  USB2UART.sch  add_path.sh  fp-info-cache
.travis/: id_rsa.enc
FPC.pretty/: FPC_24.kicad_mod
K210_Gerber/: ESP32_K210-Edge_Cuts.gm1  ESP32_K210-F_Mask.gts  ESP32_K210-F_SilkS.gto
data/: kiterf_structure.pos
docs/: CNAME  Doxyfile  README.md  _config.yml  index.html
docs/_includes/: head.html  sidebar.html
docs/_layouts/: default.html
k210.pretty/: BGA-144_12x12_8.0x8.0mm.kicad_mod  BGA144_P0.65_8.kicad_mod
lib/: MAX803.lib  TPS65053.lib
project/code/ESP32/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.old
project/code/ESP32/Demo/: Makefile
project/code/ESP32/Demo/components/cs5361/: CMakeLists.txt  cs5361.c
project/code/ESP32/Demo/components/fft_soft/: fft_soft.c
project/code/ESP32/Demo/components/iq_receive/: CMakeLists.txt  iq_receive.c
project/code/ESP32/Demo/components/lcd/: lcd.c
project/code/ESP32/Demo/components/littlevgl/: CMakeLists.txt  lv_conf.h
project/code/ESP32/Demo/components/lua_lib/: CMakeLists.txt  lsdr.c
project/code/ESP32/Demo/components/msi001/: CMakeLists.txt  msi001.c
project/code/ESP32/Demo/components/rf_switch/: CMakeLists.txt  rfswitch.c
project/code/ESP32/Demo/components/spi_soft/: CMakeLists.txt  soft_spi.c
project/code/ESP32/Demo/components/tca9555/: CMakeLists.txt  tca9555.c
project/code/ESP32/Demo/components/waterfall/: CMakeLists.txt  waterfall.c  waterfall_image.c
project/code/ESP32/Demo/main/: CMakeLists.txt  main.c
project/code/ESP32/Power_Source/: CMakeLists.txt  Makefile  README.md  partitions.csv
project/code/ESP32/Power_Source/components/INA219/: CMakeLists.txt  (+1 more)
project/code/ESP32/Power_Source/main/: CMakeLists.txt  Kconfig.projbuild  gui.c  main.c  seg_font.c
project/code/ESP32/Power_Source/spiffs/: readme.txt
project/code/ESP32/components/flash_buf/: CMakeLists.txt  flash_buf.c
project/code/ESP32/components/littlevgl/: component.mk  lv_conf.h
project/code/ESP32/components/mmo/: matrix.c  matrix_add.c  matrix_inv.c  matrix_mul.c  matrix_sub.c
project/code/ESP32/components/pid/: CMakeLists.txt
project/code/ESP32/components/rf_spi/: CMakeLists.txt  rf_spi_master.c  rf_spi_slave.c
project/code/ESP32/components/unity/: CMakeLists.txt
project/code/ESP32/main/: CMakeLists.txt  main.c
project/code/ESP8266/: README.md
project/code/ESP8266/Demo/main/: main.c
project/code/ESP8266/components/fft_soft/: CMakeLists.txt
project/code/ESP8266/components/unity/: unity.c
project/code/ESP8266/main/: CMakeLists.txt
project/code/K210/: CMakeLists.txt  build.sh  flash.sh
project/code/K210/Demo/: README.md  build.sh
project/code/K210/Demo/components/Si5351/include/: si5351.h
project/code/K210/Demo/components/dsp/basic/: dsp_mult_f32.c
project/code/K210/Demo/components/dsp/complex/: dsp_cmplx_dot_prod_f32.c
project/code/K210/Demo/components/dsp/filter/: dsp_biquad_cascade_df1_f32.c  dsp_correlate_f32.c  dsp_lms_f32.c
project/code/K210/Demo/components/dsp/include/: dsp_math.h
project/code/K210/Demo/components/dsp/matrix/: dsp_mat_mult_f32.c
project/code/K210/Demo/components/dsp/statistics/: dsp_min_f32.c  dsp_std_f32.c
project/code/K210/Demo/components/dsp/transform/: dsp_dct4_init_f32.c  dsp_rfft_init_f32.c
project/code/K210/Demo/components/fir/: fir.c
project/code/K210/Demo/components/fir/include/: fir.h
project/code/K210/Demo/components/mmo/: matrix_inv.c
project/code/K210/Demo/components/pid/include/: pid.h
project/code/K210/components/Si5351/: si5351.c
project/code/K210/components/dsp/complex/: dsp_cmplx_mult_cmplx_f32.c  dsp_cmplx_mult_real_f32.c
project/code/K210/components/dsp/controller/: dsp_pid_init_f32.c  dsp_pid_reset_f32.c
project/code/K210/components/dsp/filter/: dsp_biquad_cascade_df1_init_f32.c  dsp_biquad_cascade_stereo_df2T_init_f32.c  dsp_lms_init_f32.c
project/code/K210/components/dsp/matrix/: dsp_mat_sub_f32.c  dsp_mat_trans_f32.c
project/code/K210/components/dsp/statistics/: dsp_mean_f32.c  dsp_rms_f32.c
project/code/K210/components/dsp/tables/: dsp_const_structs.c
project/code/K210/components/dsp/transform/: dsp_rfft_fast_f32.c  dsp_rfft_fast_init_f32.c
project/code/K210/components/fft_soft/include/: fft_soft.h
project/code/K210/components/littlevgl/: lv_conf.h
project/code/K210/components/mmo/: matrix_add.c
project/code/K210/components/mmo/include/: matrix.h
project/code/K210/components/mmo/test/: matrix_add_test.c  matrix_sub_test.c
project/code/K210/components/unity/include/: unity_internals.h
project/code/K210/main/: main.c
project/code/k210/: CMakeLists.txt  build.sh  flash.sh
project/code/k210/components/fft_soft/: fft_soft.c
project/code/k210/user/: main.c
project/pcb/: ESP32_K210.csv  ESP32_K210.net  ESP32_K210.pro  K210.sch  sym-lib-table
project/pcb/FPC.pretty/: FH26-xxS-0.3SHW.kicad_mod
project/pcb/K210/: ESP32_K210.xlsx  sym-lib-table
project/pcb/K210/K210_Gerber/: ESP32_K210-B_Cu.gbl  ESP32_K210-B_Mask.gbs  ESP32_K210-B_SilkS.gbo  ESP32_K210-F_Cu.gtl
project/pcb/K210/lib/: k210.lib  w25q32.lib
project/pcb/K210_Gerber/: ESP32_K210-In1_Cu.g2  ESP32_K210-In2_Cu.g3  ESP32_K210.drl
project/pcb/RF/: AD9288.lib  ADC.bak  ADC.sch  Filter.bak  Filter.sch  MGA68563.lib  MSI.bak  MSI.lib  MSI.sch-bak  MSI001-cache.lib  MSI001.bak  MSI001.csv  MSI001.kicad_pcb-bak  MSI001.net  MSI001.pro  MSI001.sch  MSI001.xml  PE42641.lib  POWER_CLOCK.bak  POWER_CLOCK.sch  POWER_CLOCK.sch-bak  SI5351A.lib  SKY13251.lib  fp-info-cache  sym-lib-table
project/pcb/RF/RF_GERBER/: MSI001-B_Cu.gbl  MSI001-B_Mask.gbs  MSI001-B_SilkS.gbo  MSI001-Edge_Cuts.gm1  MSI001-F_Cu.gtl  MSI001-F_Mask.gts  MSI001-F_SilkS.gto  MSI001.drl
(+99 files in other folders)
